--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shop-back-end",
   "engines": {
-    "node": "13.8.0",
+    "node": "10.11.0",
     "npm": "6.14.2"
   },
   "version": "1.0.0",
@@ -17,6 +17,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.4",
+    "mongoose": "^5.9.4"
   }
 }
