--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "shop-back-end",
+  "engines": {
+    "node": "13.8.0",
+    "npm": "6.14.2"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.4"
   }
